# vowrail

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  brand.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  program-id.txt  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  renewal-sweep.yml
docs/: BRAND.md  COMPETITIVE_LANDSCAPE.md  HACKATHON_SUBMISSION.md  IDEA-AUDIT.md  ITERATION-AUDIT.md  MARKETING_VIDEO_SCRIPT.md  MEGAPROMPT.md  MEGAPROMPT_LOCKED.md  PITCH_DECK.html  PRODUCT.md  ROAST_AND_POSITIONING.md  SECURITY.md
programs/vowrail_policy/: Cargo.toml
programs/vowrail_policy/src/: lib.rs
scripts/: devnet-smoke.mjs  production-smoke.mjs  smoke.mjs
src/app/: globals.css  lab.css  layout.tsx  more.css  page.tsx  studio.css
src/app/api/agent-run/: route.ts
src/app/api/analyze/: route.ts
src/app/api/demo-resource/: route.ts
src/app/app/: page.tsx
src/app/dashboard/: page.tsx
src/app/lab/: page.tsx
src/app/receipts/: page.tsx
src/app/renewals/: page.tsx
src/app/studio/: page.tsx
src/app/verify/: page.module.css  page.tsx
src/components/: app-shell.tsx  brand-mark.tsx  claims-review.tsx  logo.tsx  motion.tsx  override-panel.tsx  prebind-checklist.tsx  renewal-actions.tsx  site-nav.tsx  wallet-button.tsx
src/lib/: agent-policy.ts  demo-data.ts  domain.ts  mvp-store.ts  policy.ts  solana-client.ts
supabase/migrations/: 202607230001_vowrail_foundation.sql
tests/: api.test.ts  domain.test.ts  policy.test.ts  workflows.test.ts
tests/e2e/: workflows.spec.ts
(+20 files in other folders)
